--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Lêɠêɳ̃dẞø†",
-  "description": "Tнє ßєѕτ υѕєяϐοτ мα∂є ϐγ Lêɠêɳ̃dẞøY. Made with Love And By Python Language With Hardwork... ❤ ",
-  "logo": "https://te.legra.ph/file/d17467283e73c884834a5.jpg",
+  "name": "Testuserẞø†",
+  "description": "Tнє ßєѕτ υѕєяϐοτ мα∂є ϐγ Krishna. Made with Love And By Python Language With Hardwork... ❤ ",
+  "logo": "https://te.legra.ph/file/e0d2a58ee8d25a9f29a60.jpg",
   "keywords": [
     "telegram",
     "userbot",
@@ -10,22 +10,23 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/LEGEND-OS/LEGENDBOT/",
-  "website": "https://github.com/LEGEND-OS/LEGENDBOT/",
+  "repository": "https://github.com/KRISHNA-ZENITSUOP/TESTUSERBOT/",
+  "website": "https://github.com/KRISHNA-ZENITSUOP/TESTUSERBOT/",
   "success_url": "https://t.me/Legend_Userbot",
   "env": {
     "ENV": {
       "description": "Set this to ANYTHING will enable heroku.",
       "value": "ANYTHING"
     },
+,
     "ALIVE_NAME": {
-      "description": "Fill your Full name. By default it is LEGEND User",
-      "value": "Lêɠêɳ̃dẞøY",
-      "required": false
+      "description": "Fill your Full name. By default it is Test User",
+      "value": "TestBoy",
+      "required": true
     },
     "ALIVE_MSG": {
       "description": "Set Custom Alive Message When entering .alive Or .legend  Command.",
-      "value": "Lêɠêɳ̃dẞø† is Online",
+      "value": "Iam user of Krishna ",
       "required": false
     },
     "ABUSE": {
@@ -140,7 +141,7 @@
       "description": "Copy Group Id And paste here To Get Plugin Channel ID copy and paste here",
       "value": ""
     }, 
-    "LEGEND_STRING": {
+    "TEST_STRING": {
       "description": "Get this value by running https://repl.it/@KrishnaJaiswal1/LEGENDBOT#main.py ",
       "value": ""
     },
