--- a/app.json
+++ b/app.json
@@ -50,12 +50,12 @@
     },
     "YOUR_GROUP": {
       "description": "Set Ur Group Username",
-      "value": "@Legend_Userbot",
+      "value": "@Thesoulmates_Ofgrp",
       "required": false
     },
     "YOUR_CHANNEL": {
       "description": "Set Ur Channel Username",
-      "value": "@Official_LegendBot",
+      "value": "@alocholickrishnaop",
       "required": false
     },
     "BOY_OR_GIRL": {
