--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "productivity"
   ],
   "repository": "https://github.com/KRISHNA-ZENITSUOP/TESTUSERBOT/",
-  "website": "https://github.com/KRISHNA-ZENITSUOP/TESTUSERBOT/",
+  "website": "https://dashboard.heroku.com/new?button-url=https%3A%2F%2Fgithub.com%2FKRISHNA-ZENITSUOP%2FTESTUSERBOT&template=https%3A%2F%2Fgithub.com%2FKRISHNA-ZENITSUOP%2FTESTUSERBOT",
   "success_url": "https://t.me/Krishna_Userbot",
   "env": {
     "ENV": {
